[package]
name = "bonk-drop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonk_drop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
arrayref = "0.3.6"
solana-program = "1.9.28"
mpl-token-metadata = { version="1.2.6", features = [ "no-entrypoint" ] }
